--- a/AvaloniaMusicConsole.Data/AvaloniaMusicConsole.Data.csproj
+++ b/AvaloniaMusicConsole.Data/AvaloniaMusicConsole.Data.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AvaloniaMusicConsole.Data\AvaloniaMusicConsole.Data.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
