--- a/AvaloniaMusicConsole/AvaloniaMusicConsole.csproj
+++ b/AvaloniaMusicConsole/AvaloniaMusicConsole.csproj
@@ -24,4 +24,8 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AvaloniaMusicConsole.Data\AvaloniaMusicConsole.Data.csproj" />
+  </ItemGroup>
 </Project>
